# shiori

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  proposal.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_dictionaries.sql
src-tauri/src/: annotations.rs  db.rs  dictionaries.rs  documents.rs  lib.rs  main.rs
src/components/: DictionaryPopup.tsx  EpubViewer.tsx  HomeScreen.tsx  PdfViewer.tsx  SettingsScreen.tsx  ShioriShell.tsx  Sidebar.tsx  Toolbar.tsx
src/services/: tauri.ts
src/utils/: format.ts  japanese.ts
