[package]
name = "shiori"
version = "0.1.0"
description = "Shiori desktop app for PDF, EPUB, Japanese dictionaries, and Anki"
authors = ["Shiori"]
edition = "2021"

[lib]
name = "shiori_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
time = "=0.3.47"
